--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -12,7 +12,6 @@
 /* Default Button Styles */
 button,
 .action-button a {
-	display: block;
 	font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	font-size: 21px;
 	font-weight: 800;
@@ -21,16 +20,17 @@ button,
 	box-shadow:none;
     overflow: auto;
     text-decoration: none;
+
 }
 button:disabled {
 	opacity: .6;
 }
 .action-button {
-	padding: 10px 20px 20px;
+	padding: 10px 20px 10px;
 	z-index: 10;
 }
 .action-button.no-padding {
-	padding: 10px 0px 20px;
+	padding: 10px 0px 10px;
 }
 .action-button a,
 .action-button button {
@@ -41,7 +41,7 @@ button:disabled {
 	display: block;
 	height: 44px;
 	line-height: 24px;
-	margin: 0;
+	margin: 0 0 10px;
 }
 /* Button Colors */
 .primary-button,
