--- a/www/css/style.css
+++ b/www/css/style.css
@@ -219,8 +219,8 @@
 }
 
 .product-info-container {
-    height:20%;
     width:100%;
+    padding: 0 0 20px;
     background:rgba(0, 0, 0, 0.4);
     position:fixed;
     z-index:5;
@@ -276,11 +276,11 @@
 /* COMPLETE PAGE */
 
 #appt-info-container {
-    position:absolute;
-    bottom:20%;
-    width:100%;
-    text-align:center;
-    color:#ffffff;
+    position: absolute;
+    bottom: 110px;
+    width: 100%;
+    text-align: center;
+    color: #fff;
     z-index: 10;
 }
 
@@ -437,15 +437,13 @@
 
 .button-clear {
     margin-left:16px;
-    width:50%;
-    padding-left:0px;
+    width: 50%;
+    padding-left: 20px;
+    text-align: left;
 }
 
 .ion-ios-arrow-back {
-    float:left;
-    margin-left:0%;
-    color:#ed5f5e;
-    font-size:;
+    color: #ed5f5e;
 }
 
 .blurry {
@@ -534,7 +532,7 @@
 
 .settings-header-text {
     float:left;
-    margin-left:5px;
+    margin-left:0px;
 }
 
 .settings-header-btn {
