Changing all vw to vmin so css will support landscape mode as well.

--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -111,8 +111,8 @@ a#call-btn {
 }
 
 .date-container button {
-    width: 28vw;
-    height: 20vw;
+    width: 28vmin;
+    height: 20vmin;
 }
 
 .date-container button:first-child,
