--- a/www/css/style.css
+++ b/www/css/style.css
@@ -110,7 +110,7 @@
     display:inline-block;
     position: absolute;
     right: 0;
-    top: 3.5vw;
+    top: 3.5vmin;
     font-size:22px;
     vertical-align:middle;
     text-align:right;
