Change link size of privacy policy and cancellation policy links.

--- a/www/css/typography.css
+++ b/www/css/typography.css
@@ -117,3 +117,7 @@ html {
 .underline {
     text-decoration: underline;
 }
+
+#policies-container div {
+    font-size: 4.5vmin; /* 18px; */    
+}
