Adding more styling to buttons.

--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -107,7 +107,7 @@ a#call-btn {
     border-width:1px;
     border-color:#D6D6D6;
     background-color:#ffffff;
-    color:#D6D6D6;
+    color: #7d7c7a;
     height: 64px;
     box-shadow:none;
 }
