san francisco address msg in edit address modals/dialogs, include only numeric for phone validation, contact us link in edit address modal

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -269,6 +269,10 @@
     font-size:10px;
 }
 
+.anchor-text-underline{
+    text-decoration: underline;
+}
+
 #confirm-address-btn {
     margin-top:2.5%;
     margin-bottom:2.5%;
