--- a/www/css/buttons.css
+++ b/www/css/buttons.css
@@ -33,10 +33,10 @@ button,
 	margin: 0 0 10px !important;
 	padding: 10px;
 	width: 100%;
-	height: 44px;
+	height: 44px !important;
 	line-height: 24px;
 	opacity: .9;
-	border-radius: 4px;
+	border-radius: 4px !important;
 	z-index: 10;
 }
 .primary-btn,
