--- a/www/css/style.css
+++ b/www/css/style.css
@@ -496,9 +496,9 @@
 .settings-right-btn-address {
     float:right;
     background: transparent url('../img/icon_caret_ash_right@3x.png') no-repeat center center;
-    background-size: 32px 32px;
-    height:32px;
-    width:32px;
+    background-size: cover;
+    height:25px;
+    width:25px;
     font-size:16px;
     margin-top:8px;
 }
