--- a/www/css/style.css
+++ b/www/css/style.css
@@ -656,3 +656,9 @@
     color: #9d9c9a;
     float:left;
 }
+
+.shaded-background {
+    -webkit-transition: opacity 300ms ease-in-out;
+    transition: opacity 300ms ease-in-out;
+    opacity: .5;
+}
