--- a/www/css/style.css
+++ b/www/css/style.css
@@ -162,55 +162,65 @@
 
 
 /* PRODUCT DEATILS */
+.image-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
 .user-text-container {
     margin-left:5%;
     margin-right:5%;
     margin-bottom:20px;
     margin-top:15px;
-    background-color:#ffffff;
-    color:#3d3c3a;
+    background-color: #ffffff;
+    color: #3d3c3a;
 }
 
 .user-info-container {
     position:absolute;
-    margin-top:270px;
+    bottom: 0;
     width:100%;
     height:10%;
+    z-index: 10;
 }
 
 .user-profile-image {
-    float:left;
-    width:25%;
-    height:50px;
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    width: 60px;
+    height: 60px;
 }
 
 .img-circle {
-    height:50px;
-    width:50px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
-    background-size:cover;
-    margin-left:17%;
+    background-size: cover;
     border: 1.5px solid #ffffff;
 }
 
 .img-small-circle {
-    position:absolute;
-    height:17px;
-    width:17px;
+    position: absolute;
+    height: 17px;
+    width: 17px;
     border-radius: 50%;
     background-size:cover;
-    margin-left:4%;
-    margin-top:10%;
+    bottom: 0;
+    left: 0;
     border: 1.5px solid #ffffff;
     background-image:url('../img/icon_instagram_active_large@3x.png');
 }
 
 .user-name {
-    float:left;
-    width:75%;
-    height:50px;
-    line-height: 50px;
-    color:#ffffff;
+    position: absolute;
+    left: 90px;
+    bottom: 20px;
+    height: 60px;
+    font-size: 5vmin; /* 21px; */
+    line-height: 60px;
+    color: #fff;
 }
 
 .image-container {
