Fixing instagram list to have a margin at the bottom of the page.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -167,8 +167,9 @@
 
 
 /* PRODUCT DEATILS */
-.instagram-list .instagram-container:last-child {
+.instagram-list {
     margin-bottom: 80px;
+    overflow: visible;
 }
 .image-container {
     position: relative;
